# dimos

./: .create_venv.out  .create_venv.sh  .gitattributes  .gitignore  .pip_install.out  .python_check.out  .python_check.sh  AGENTS.md  README.md  builddev.sh  changes.md  default.env  flake.nix  mkdocs.yml  pyproject.toml  requirements.txt  retarded.txt  run_docker.sh  temp.txt  uv.lock.REMOVED.git-id
.github/workflows/: _docker-build-template.yml  docker.yml
autoresearch/: optimizations.py
dimos/: POLICY_DEPLOY_GUIDE.md  conftest.py  test_no_sections.py
dimos/agents/: agent.py  agent_ctransformers_gguf.py  agent_huggingface_local.py  agent_huggingface_remote.py  cerebras_agent.py  claude_agent.py  planning_agent.py  test_agent_image_message.py  test_agent_message_streams.py  test_agent_tools.py
dimos/agents2/: agent.py  spec.py  test_agent.py
dimos/control/: __init__.py  blueprints.py  components.py  coordinator.py  hardware_interface.py  task.py
dimos/core/: README_BLUEPRINTS.md  README_DOCKER_MODULE.md  __init__.py  blueprints.py  docker_build.py  docker_module.py  docker_runner.py  docker_worker_manager.py  global_config.py  module.py  module_coordinator.py  native_module.py  resource.py  rpc_client.py  run_registry.py  stream.py  test_blueprints.py  test_build_graph.py  test_core.py  test_e2e_daemon.py  test_lcmmsg_gen.py  test_native_module.py  transport.py  types.py  worker.py  worker_manager.py
dimos/dashboard/: module.py  rerun_init.py  rerun_module.py  rerun_tap.py  server.py
dimos/e2e_tests/: test_control_coordinator.py
dimos/hardware/: fake_zed_module.py  ft_driver_module.py  gstreamer_camera.py  lerobot_kinematics.py  piper_arm.py  so101_arm.py
dimos/manipulation/: manip_aio_pipeline.py  manip_aio_processer.py  manipulation_blueprints.py  manipulation_history.py  manipulation_interface.py  manipulation_module.py  pick_and_place_module.py
dimos/mapping/: costmapper.py  test_voxels.py  voxels.py
dimos/memory/: __init__.py  formatting.py  store.py  stream.py  test_stream_repr.py  test_transformer.py  transformer.py  types.py
dimos/memory2/: __init__.py  architecture.md  backend.py  module.py  registry.py  store.py  stream.py  test_embedding.py  test_impl.py  test_registry.py  test_save.py  test_stream.py  transform.py
dimos/navigation/: bbox_navigation.py  cmd_vel_mux.py  dimos_module_entrypoint.sh  rosnav.py  rosnav_docker.py  test_rosnav.py
dimos/perception/: object_detection_stream.py  object_scene_registration.py  object_tracker.py  object_tracker_2d.py  object_tracker_3d.py  person_tracker.py  spatial_perception.py  test_object_tracker_3d.py
dimos/robot/: all_blueprints.py  (+12 more)
docs/: build_docs.sh  hooks.py  index.md  roi_grasp_pipeline.md
installer/: README.md
rust/dimos_rust_transport/: Cargo.toml  README.md  pyproject.toml
rust/dimos_rust_transport/src/: lib.rs  message.rs  python_bindings.rs  runtime.rs
rust/dimos_rust_transport/src/services/: lcm.rs  mod.rs
rust/dimos_rust_transport/src/transport/: inproc.rs  lcm.rs  mod.rs  shm.rs
rust/dimos_rust_transport/src/transports/: lcm.rs  mod.rs  shm.rs
scripts/: run_inference.py
tests/: agent_manip_flow_flask_test.py  agent_manip_flow_test.py  run.py  run_webrtc.py  test_agent_alibaba.py  test_daemon.py  test_dashboard_server_thread.py  test_huggingface_llm_agent.py  test_ibvs.py  test_image_backends.py  test_manipulation_agent.py  test_manipulation_pipeline_single_frame.py  test_manipulation_pipeline_single_frame_lcm.py  test_navigate_to_object_robot.py  test_navigation_skills.py  test_object_tracking_module.py  test_person_following_robot.py  test_pick_and_place_module.py  test_pick_and_place_skill.py  test_planning_agent_web_interface.py  test_planning_robot_agent.py  test_roi_grasp_pipeline.py  test_rtsp_video_provider.py  test_so101_pick_and_place.py  test_unitree_agent_queries_fastapi.py  test_zed_module.py  visualization_script.py  zed_neural_depth_demo.py
(+573 files in other folders)
