[package]
name = "dimos_rust_transport"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "dimos_rust_transport"
crate-type = ["cdylib"]

[features]
default = ["inproc"]
# Placeholders for real backends. Wire in actual deps later.
transport-lcm = []
transport-shm = []
cuda = []
inproc = []

[dependencies]
anyhow = "1"
thiserror = "1"
once_cell = "1"
parking_lot = "0.12"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

[package.metadata.maturin]
name = "dimos_rust_transport"
