[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "dimos_rust_transport"
version = "0.1.0"
description = "Prototype Rust FFI LCM/SHM transport for Python via PyO3"
requires-python = ">=3.8"
authors = [{ name = "dimos", email = "devnull@example.com" }]
license = { text = "Proprietary" }
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[tool.maturin]
features = ["inproc"]
